--- a/SpringMVCTutorial/pom.xml
+++ b/SpringMVCTutorial/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>5.1.6.RELEASE</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 </project>
