--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -56,7 +56,7 @@
 
 	<!-- TO DO: Add support for Maven WAR Plugin -->
 	<build>
-		<finalName>spring=security-demo</finalName>
+		<finalName>spring-security-demo</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
