--- a/spring-security-demo-jdbc/pom.xml
+++ b/spring-security-demo-jdbc/pom.xml
@@ -39,12 +39,24 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${springsecurity.version}</version>
 		</dependency>
-		
+
 		<!-- Add Spring Security Taglibs support -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${springsecurity.version}</version>
+		</dependency>
+
+		<!-- Add MySQL and C3p0 support -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.4</version>
 		</dependency>
 
 		<!-- Servlet, JSP and JSTL support -->
