--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<!-- Add support for JSP ... get rid of Eclipse error -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring-rest-demo</finalName>
