--- a/spring-rest-demo/pom.xml
+++ b/spring-rest-demo/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>spring-rest-demo</finalName>
