Examples of Spring Boot- Application Properties

--- a/03-actuator-demo/src/main/resources/application.properties
+++ b/03-actuator-demo/src/main/resources/application.properties
@@ -9,3 +9,13 @@ management.endpoints.web.exposure.include=*
 
 # Exclude individual endpoints with a comma-delimited list
 #management.endpoints.web.exposure.exclude=health,info
+
+# define my crazy properties
+coach.name=Mickey Mouse
+team.name=The Mouse Club
+
+## Change Spring Boot embedded server port
+server.port=7070
+
+# configure the application context path - you need to provide this prefix to access this webapp
+server.servlet.context-path=/mycoolapp
